// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowEvent renders the event page. 1`] = `
<div>
  <h3>
    This is the event page!
  </h3>
  <EventComponent
    event={
      Object {
        "description": "This is the first event.",
        "id": 1,
        "name": "event1",
      }
    }
  />
  <ParticipantForm
    eventId={1}
    onSubmit={[Function]}
  />
</div>
`;

exports[`ShowEvent renders the page not found error page. 1`] = `
<Error
  statusCode="404"
/>
`;

exports[`ShowEvent renders the page with error messages. 1`] = `
<div>
  <ul>
    <li>
      nameを入力してください
    </li>
    <li>
      nameは１０文字以内です
    </li>
  </ul>
  <h3>
    This is the event page!
  </h3>
  <EventComponent
    event={
      Object {
        "errors": Array [
          "nameを入力してください",
          "nameは１０文字以内です",
        ],
      }
    }
  />
  <ParticipantForm
    onSubmit={[Function]}
  />
</div>
`;
